--- a/src/404.html
+++ b/src/404.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Clic.ly - Not found page</title>    
+        <title>Clic.ly - Not found page</title>
     </head>
     <body>
         <header>
@@ -10,9 +10,11 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="#">Princing</a>
-                <a href="#">About Us</a>
+                <a href="#">About Us</a" >
                 <a href="#">log in</a>
             </nav>
         </header>
+        <h1>Seems like we were not ready for that click</h1>
+        <h2>Well, let’s at least play a game?</h2>
     </body>
 </html>
