--- a/src/404.html
+++ b/src/404.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Clic.ly - Not found page</title>
+
+        <link rel="stylesheet" href="css/settings/color.css"> 
+        <link rel="stylesheet" href="css/elements/base.css"> 
     </head>
     <body>
         <header>
