--- a/src/404.html
+++ b/src/404.html
@@ -4,12 +4,16 @@
         <meta charset="utf-8">
         <title>Clic.ly - Not found page</title>
 
+        <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
+        
         <link rel="stylesheet" href="css/settings/color.css"> 
         <link rel="stylesheet" href="css/elements/base.css"> 
+
+        <link rel="stylesheet" href="css/components/main-log.css">
     </head>
     <body>
         <header>
-            <h1>Clic.ly</h1>
+            <h1 class="main-log">Clic.ly</h1>
             <nav>
                 <a href="#">Home</a>
                 <a href="#">Princing</a>
