--- a/src/404.html
+++ b/src/404.html
@@ -5,19 +5,21 @@
         <title>Clic.ly - Not found page</title>
 
         <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
         
         <link rel="stylesheet" href="css/settings/color.css"> 
         <link rel="stylesheet" href="css/elements/base.css"> 
 
+        <link rel="stylesheet" href="css/components/simple-action.css">
         <link rel="stylesheet" href="css/components/main-log.css">
     </head>
     <body>
         <header>
             <h1 class="main-log">Clic.ly</h1>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">Princing</a>
-                <a href="#">About Us</a" >
+                <a class="simple-action" href="#">Home</aclass="simple-action" >
+                <a class="simple-action" href="#">Princing</aclass="simple-action" >
+                <a class="simple-action" href="#">About Us</aclass="simple-action" >
                 <a href="#">log in</a>
             </nav>
         </header>
