--- a/src/404.html
+++ b/src/404.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/elements/base.css"> 
 
         <link rel="stylesheet" href="css/components/simple-action.css">
+        <link rel="stylesheet" href="css/components/primary-button.css">
         <link rel="stylesheet" href="css/components/main-log.css">
     </head>
     <body>
@@ -20,7 +21,7 @@
                 <a class="simple-action" href="#">Home</aclass="simple-action" >
                 <a class="simple-action" href="#">Princing</aclass="simple-action" >
                 <a class="simple-action" href="#">About Us</aclass="simple-action" >
-                <a href="#">log in</a>
+                <a class="primary-button" href="#">log in</a>
             </nav>
         </header>
         <h1>Seems like we were not ready for that click</h1>
