--- a/src/404.html
+++ b/src/404.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Clic.ly - Not found page</title>
-
+        <title>Clic.ly - Not found page</title>  
+        
         <link href="https://fonts.googleapis.com/css?family=Bitter:400,400i,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
         
@@ -13,9 +13,12 @@
         <link rel="stylesheet" href="css/components/simple-action.css">
         <link rel="stylesheet" href="css/components/primary-button.css">
         <link rel="stylesheet" href="css/components/main-log.css">
+
+        <link rel="stylesheet" href="css/conteineres/main-header.css">
+
     </head>
     <body>
-        <header>
+        <header class="main-header">
             <h1 class="main-log">Clic.ly</h1>
             <nav>
                 <a class="simple-action" href="#">Home</aclass="simple-action" >
