--- a/src/404.html
+++ b/src/404.html
@@ -8,19 +8,21 @@
         <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
         
         <link rel="stylesheet" href="css/settings/color.css"> 
+        <link rel="stylesheet" href="css/settings/gap.css">
         <link rel="stylesheet" href="css/elements/base.css"> 
 
         <link rel="stylesheet" href="css/components/simple-action.css">
         <link rel="stylesheet" href="css/components/primary-button.css">
         <link rel="stylesheet" href="css/components/main-log.css">
 
+        <link rel="stylesheet" href="css/conteineres/main-menu.css">
         <link rel="stylesheet" href="css/conteineres/main-header.css">
 
     </head>
     <body>
         <header class="main-header">
             <h1 class="main-log">Clic.ly</h1>
-            <nav>
+            <nav class="main-menu">
                 <a class="simple-action" href="#">Home</aclass="simple-action" >
                 <a class="simple-action" href="#">Princing</aclass="simple-action" >
                 <a class="simple-action" href="#">About Us</aclass="simple-action" >
