Crie o arquivo reset.css
O arquivo reset.css é uma técnica que ajuda a implementar um site cross browser

--- a/src/404.html
+++ b/src/404.html
@@ -9,6 +9,7 @@
         
         <link rel="stylesheet" href="css/settings/color.css"> 
         <link rel="stylesheet" href="css/settings/gap.css">
+        <link rel="stylesheet" href="css/generic/reset.css">
         <link rel="stylesheet" href="css/elements/base.css"> 
 
         <link rel="stylesheet" href="css/components/simple-action.css">
