--- a/src/404.html
+++ b/src/404.html
@@ -12,10 +12,11 @@
         <link rel="stylesheet" href="css/generic/reset.css">
         <link rel="stylesheet" href="css/elements/base.css"> 
 
+        <link rel="stylesheet" href="css/components/main-log.css">
         <link rel="stylesheet" href="css/components/simple-action.css">
         <link rel="stylesheet" href="css/components/primary-button.css">
-        <link rel="stylesheet" href="css/components/main-log.css">
-
+        <link rel="stylesheet" href="css/components/simple-title.css">
+        
         <link rel="stylesheet" href="css/conteineres/main-menu.css">
         <link rel="stylesheet" href="css/conteineres/main-header.css">
 
@@ -31,7 +32,7 @@
             </nav>
         </header>
         <section>
-            <h1>Seems like we were not ready for that click</h1>
+            <h1 class="simple-title">Seems like we were not ready for that click</h1>
             <h2>Well, let’s at least play a game?</h2>
             <a href="">Play</a>
             <a href="">Go Home</a>
